Fixed collapse/expand icon on module in WF

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1160,6 +1160,7 @@ img.logo {
 
 .small-sort{
   font-size: 0.7rem;
+  opacity: 0.7;
 }
 
 .card .second-level {
